--- a/public/style.css
+++ b/public/style.css
@@ -14,10 +14,6 @@
 	padding: 0;
 }
 
-.isHidden {
-	display: none;
-}
-
 .wrapper {
 	height: 100vh;
 	display: flex;
@@ -44,6 +40,12 @@ p {
 
 .better {
 	font-size: 1rem;
+}
+
+@media (landscape) {
+	.better {
+		display: none;
+	}
 }
 
 .elmt {
