--- a/public/style.css
+++ b/public/style.css
@@ -42,7 +42,7 @@ p {
 	font-size: 1rem;
 }
 
-@media (landscape) {
+@media (orientation: landscape) {
 	.better {
 		display: none;
 	}
@@ -51,7 +51,6 @@ p {
 .elmt {
 	text-align: center;
 	font-size: 2.8rem;
-	/*touch-action: none;*/
 }
 
 .elmt:nth-child(1) {
