--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@ html, body {
 
 .wrapper {
 	background-color: var(--bgcolor);
-	height: 100vh;
+	min-height: 100vh;
 	width: 100vw;
 	display: grid;
 	grid-template-areas: 
@@ -22,8 +22,9 @@ html, body {
 						"m m m m"
 						"a a a a"
 						;
-	grid-template-rows: 1fr 4fr 2fr;
-	overflow: hiden;
+	grid-template-rows: auto auto auto;
+	overflow: hidden;
+	padding: 5vw;
 }
 
 @media (orientation: landscape) {
@@ -75,6 +76,9 @@ html, body {
 }
 
 .invader_el {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	outline: 1px solid #FFF5A2;
 	background-color: gold;
 	width: 5vw;
@@ -327,4 +331,35 @@ h2 {
 
 .perks__desc::after {
 	content: ')';
+}
+
+.fa-star {
+	visibility: hidden;
+	position: relative;
+	z-index: 2;
+	font-size: 0;
+	color: #DB1B18;
+}
+
+.fa-star_animated {
+	visibility: visible;
+	animation-name: gunfire;
+	animation-delay: 0;
+	animation-duration: 0.7s;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: 3;
+}
+
+@keyframes gunfire {
+	0% {
+		font-size: 0;
+	}
+	50% {
+		color: orange;
+	}
+	100% {
+		font-size: 8vw;
+		color: #DB1B18;
+	}
+
 }
