--- a/public/style.css
+++ b/public/style.css
@@ -79,7 +79,7 @@ html, body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	outline: 1px solid red /*#FFF5A2*/;
+	outline: 1px solid #FFF5A2;
 	background-color: gold;
 	width: 5vw;
 	height: 5vw;
