--- a/public/style.css
+++ b/public/style.css
@@ -48,6 +48,7 @@ html, body {
 }
 
 .main {
+	position: relative;
 	grid-area: m;
 	padding: 1vw;
 	display: grid;
@@ -77,7 +78,7 @@ html, body {
 	justify-content: center;
 }
 
-.invader__terminator {
+.invader_terminator {
 	grid-template-areas: 
 						". . . . . . . . . . . . . . ."
 						". . . . . . . . . . . . . . ."
@@ -94,6 +95,27 @@ html, body {
 						". . . . . . . . . . . . . . ."
 						". . . . . . . . . . . . . . ."
 						". . . . . . . . . . . . . . .";
+}
+
+.invader_poo {
+	animation: poo 4s steps(4);
+}
+
+@keyframes poo {
+	100% {
+		transform: translateX( -120% );
+	}
+}
+
+.poo {
+	visibility: hidden;
+	position: absolute;
+	z-index: 5;
+	top: 50%;
+	left: 50%;
+	width: 10vw;
+	height: 10vw;
+	transform: translate(-50%, -10%);
 }
 
 .eye {
