--- a/public/style.css
+++ b/public/style.css
@@ -109,22 +109,22 @@ html, body {
 
 @keyframes shake {
 	10% {
-		transform: translateX( -1% );
+		transform: translateX( -0.5% );
 	}
 	20% {
-		transform: translateX( 1% );
+		transform: translateX( 0.5% );
 	}
 	35% {
-		transform: translateX( -1% );
+		transform: translateX( -0.5% );
 	}
 	50% {
-		transform: translateX( 1% );
+		transform: translateX( 0.5% );
 	}
 	65% {
-		transform: translateX( -1% );
+		transform: translateX( -0.5% );
 	}
 	80%  {
-		transform: translateX( 1% );
+		transform: translateX( 0.5% );
 	}
 	100% {
 		transform: translateX( 0% );
@@ -185,7 +185,7 @@ html, body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	outline: 1px solid blue/*#FFF5A2*/;
+	outline: 1px solid #FFF5A2;
 	background-color: gold;
 	width: 5vw;
 	height: 5vw;
